--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -24,45 +24,46 @@ dataDirectoryName = shepherd_data_dir
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
 #This parameter does not affect Shepherd Project behavior except when exporting Excel files for use with the GBIF, iOBIS, etc.
-GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
+GlobalUniqueIdentifierPrefix=ECOCEAN:MBIROSTRIS:
 
 # set wikiLocation to point to your wiki to enable integration, e.g.
-#wikiLocation=http://localhost:8080/wiki/doku.php?id=
+wikiLocation=http://www.mantamatcher.org/wiki/doku.php?id=
 
 #whether to display and allow adoptions - set to true for yes and false for no
-allowAdoptions = false
+allowAdoptions = true
 
 #email addresses and parameters
 sendEmailNotifications=true
-autoEmailAddress=webmaster@someplace.org
-newSubmissionEmail=submissions@someplace.org
+autoEmailAddress=webmaster@mantamatcher.org
+newSubmissionEmail=submissions@mantamatcher,org
 mailHost=localhost
 removeEmailString=Do you want to REMOVE your email address from this database? Click the link below to remove it. You will no longer receive updates on your encounters.
 
 #HTML metadata for each page
-htmlDescription=A text description of your mark-recapture project
-htmlKeywords=A bunch of keywords to help search engines categorize your web site
-htmlTitle=My Mark-Recapture Project for Species X
 cssURLLocation=css/ecocean.css
 htmlShortcutIcon=images/favicon.ico
-htmlAuthor=My Research Group
+htmlAuthor=ECOCEAN USA - info@ecoceanusa.org
+htmlDescription=The ECOCEAN Manta Matcher is a visual database of giant manta (Manta birostris) encounters and of individually catalogued giant mantas. The library is maintained and used by marine biologists to collect and analyse giant manta encounter data to learn more about these amazing creatures.
+htmlKeywords=giant manta,manta ray,Manta birostris,big fish,ECOCEAN USA, fish, coral, sharks, elasmobranch, mark, recapture, photo-identification, identification, conservation, citizen science
+htmlTitle=ECOCEAN MantaMatcher
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=/${pom.artifactId}-${pom.version}/images/masthead.jpg
+urlToMastheadGraphic=/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=/${pom.artifactId}-${pom.version}/images/lib_bottom.gif
+urlToFooterGraphic=/images/lib_bottom.gif
 footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
 
 
 #Google Service keys for Search and Maps
-googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt9jxgaFm7Pt0GVfRimDdw
+googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRQgRXet3y6wZebXyUrNwiCxW4Mr5BQWWJRAkB49_w9skQ6mWmL9e8yxDQ
+
 
 #DataNucleus parameters for object persistence
 
 # the following two lines create a connection to an embedded derby database.
-datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
-datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
+#datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
+#datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
 
 # The following two lines create a connection to a SQLite database.
 # You will also need to add the JDBC JAR file for your SQLite version to /WEB-INF/lib.
@@ -81,9 +82,16 @@ datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
 #datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/myDatabaseName
 
 javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.api.jdo.JDOPersistenceManagerFactory
-datanucleus.ConnectionUserName=shepherd
-datanucleus.ConnectionPassword=shepherd
-datanucleus.autoCreateSchema=true
+datanucleus.ConnectionDriverName=org.postgresql.Driver
+datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/mantas2
+datanucleus.autoCreateSchema = true
+datanucleus.ConnectionUserName=matcher
+datanucleus.ConnectionPassword=q1w2e3r4t5
+
+#javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.api.jdo.JDOPersistenceManagerFactory
+#datanucleus.ConnectionUserName=shepherd
+#datanucleus.ConnectionPassword=shepherd
+#datanucleus.autoCreateSchema=true
 datanucleus.NontransactionalRead=true
 datanucleus.Multithreaded=true
 datanucleus.RestoreValues=true
@@ -91,7 +99,7 @@ datanucleus.storeManagerType=rdbms
 
 
 #pattern recognition
-useSpotPatternRecognition=true
+useSpotPatternRecognition=false
 
 #Modified Groth algorithm parameters for spot pattern recognition
 R=8
@@ -101,17 +109,17 @@ maxTriangleRotation=30
 C=0.99
 
 #Other common properties used for some data export (e.g. Encounter Search Excel export)
-citation=Lastname, Firstname. My species mark-recapture software library. MyURL.
-institutionCode=myInstitution
-catalogCode=myCatalog
+citation=Marshall, Andrea and Holmberg, Jason. MantaMatcher Photo-identification Library, 2011. http://www.mantamatcher.org
+institutionCode=ECOCEAN
+catalogCode=MANTA
 
 #for single species libraries, fill out these fields
-kingdom=whichKingdom
-phylum=whichPhylum
-class=whichClass
-order=whichOrder
-family=whichFamily
-genus=whichGenus
+kingdom=ANIMALIA
+phylum=CHORDATA
+class=CHONDRICHTHYES
+order=	RAJIFORMES
+family=MOBULIDAE
+genus=Manta
 species=whichSpecies
 
 
@@ -123,7 +131,7 @@ allowNicknames=true
 isCatalogEditable = true
 
 #TapirLink-related settings
-#tapirLinkURL = http://localhost:8080/tapirlink/admin/configurator.php
+http://www.mantamatcher.org/tapirlink/admin/configurator.php
 
 #GBIF IPT-related settings
 #iptURL = http://localhost:8080/ipt-2.0.2
@@ -135,8 +143,8 @@ showEXIF = true
 showTaxonomy = false
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
-#genusSpecies0=genus specificEpithet
-#genusSpecies1=genus specificEpithet
+genusSpecies0=Manta birostris
+genusSpecies1=Manta alfredi
 #genusSpecies2=genus specificEpithet
 
 #show lifeStage
@@ -151,26 +159,23 @@ lifeStage2=adult
 showMeasurements = true
 
 #Measurements
-measurement0=weight
-measurementUnits0=kilograms
-measurement1=length
-measurementUnits1=meters
-measurement2=height
-measurementUnits2=meters
+measurement0=disc width
+measurementUnits0=meters
 
 #Sampling Protocol for Measurements
-samplingProtocol0=estimate
-samplingProtocol1=measure
+samplingProtocol0=personal guess
+samplingProtocol1=guess of guide/researcher
+samplingProtocol2=directly measured
 
 #show elevation/depth
-maximumElevationInMeters = true
+maximumElevationInMeters = false
 maximumDepthInMeters = true
 
 #show size for encounters
 showSize = true
 
 #project-related variables
-application.version=${pom.version}
+application.version=shepherd-2.4.0-RELEASE
 
 #genetic parameters
 numLoci = 14
@@ -199,6 +204,19 @@ encounterState1=approved
 encounterState2=unidentifiable
 
 #limit Encounter.locationID to these values
-#locationID0 = location0
-#locationID1 = location 1
+locationID0 = Mozambique
+locationID1 = SouthAfrica
+locationID2 = AustraliaEast
+locationID3 = AustraliaWest
+locationID4 = Brazil
+locationID5 = Ecuador
+locationID6 = Thailand
+locationID7 = Myanmar
+locationID8 = Indonesia
+locationID9 = Palau
+locationID10 = Japan
+locationID11 = MexicoRevillagigedos
+locationID12 = Hawaii
+locationID13 = Maldives
+locationID14 = Peru
 
